--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,6 @@
-= +plast+ — Threat Hunting Framework & Utility
+= +plast+ — Modular Threat Hunting Tool & Framework
 Nelson "sk4la" Cornet <https://github.com/sk4la>
-:caution-caption: :fire:
-:uri-org: https://github.com/sk4la
-:uri-repo: {uri-org}/plast
+:uri-repo: https://github.com/sk4la/plast
 :uri-license: {uri-repo}/blob/master/LICENSE.adoc
 :uri-contrib: {uri-repo}/blob/master/CONTRIBUTING.adoc
 :uri-python: https://www.python.org
@@ -10,15 +8,17 @@ Nelson "sk4la" Cornet <https://github.com/sk4la>
 
 image:https://img.shields.io/badge/python-3.7-blue.svg[link={uri-python}] image:https://img.shields.io/badge/license-MIT-green.svg[link={uri-license}]
 
-`plast` is an open-source modular command-line threat hunting tool & framework. It comes with several modules that allow to process multiple data formats, trigger automatic actions upon detection and produce customized output.
+`plast` is a command-line and heavily modular *threat hunting tool*. It comes with several modules that allow to process multiple data formats, trigger automatic actions upon detection and produce customized output.
 
-Under the hood, `plast` uses {uri-yara}[YARA] through `multiprocessing` tasks to perform rule-based https://en.wikipedia.org/wiki/Indicator_of_compromise[IOC] detection on multiple types of input.
+`plast`'s engine uses {uri-yara}[YARA] under the hood, leveraged through `multiprocessing` tasks to perform rule-based https://en.wikipedia.org/wiki/Indicator_of_compromise[IoC] detection on multiple types of input.
 
-The main goal of the `plast` project is to provide an **efficient & effortless** way to detect indicators of compromission during incident-response operations.
+The main goal of the `plast` project is to provide an *efficient and effortless* way to detect indicators of compromission (https://en.wikipedia.org/wiki/Indicator_of_compromise[IoC]) during incident-response operations.
 
-It provides a comprehensive framework that easily allows processing of multiple data types. It also embeds all modules in one single tool, allowing `plast` to be used on the field as a standalone utility.
+It provides a comprehensive framework that easily allows to add functionalities to the tool in just a few lines of code, without worrying about efficiency and scalability. `plast` embeds all referenced modules in one single tool, allowing it to be used on the field as a *standalone utility*.
 
 `plast` is entirely written in `python3` which makes it compatible with almost all GNU/Linux and macOS distributions. Nevertheless, some minimal dependencies are required.
+
+*Example GIF.*
 
 == Getting Started
 
@@ -44,9 +44,9 @@ And the latest `python3` environment:
 apt install -y python3 python3-pip python3-venv
 ----
 
-`Pre`, `Post` and `Callback` modules have their own dependencies which may not be listed here.
+Modules have their own dependencies that may not be listed here.
 
-Also, if you plan on compiling hash-based YARA ruleset(s), you may need to install the OpenSSL library:
+Also, if you plan on compiling hash-based YARA ruleset(s), you will need to install the OpenSSL library:
 
 [source,sh]
 ----
@@ -109,7 +109,9 @@ You can easily choose which modules will be invocated during processing by setti
 plast -o out --callbacks=example --post=example filesystem -i case
 ----
 
-`Callback` and `Post` modules are defined by their basename without extension (ex: `asciidoc` for `asciidoc.py`)
+`Callback` and `Post` modules are defined by their basename without extension (eg. `asciidoc` for `asciidoc.py`).
+
+See more examples in {uri-contrib}[CONTRIBUTING.adoc].
 
 == Contributing
 
