--- a/README.adoc
+++ b/README.adoc
@@ -10,9 +10,9 @@ image:https://img.shields.io/badge/python-3.7-blue.svg[link={uri-python}] image:
 
 `plast` is a command-line and heavily modular *threat hunting tool*. It comes with several modules that allow to process multiple data formats, trigger automatic actions upon detection and produce customized output.
 
-`plast`'s engine uses {uri-yara}[YARA] under the hood, leveraged through `multiprocessing` tasks to perform rule-based https://en.wikipedia.org/wiki/Indicator_of_compromise[IoC] detection on multiple types of input.
+`plast` 's engine uses `yara` ({uri-yara}) under the hood, leveraged through `multiprocessing` tasks to perform rule-based detection on multiple types of input.
 
-The main goal of the `plast` project is to provide an *efficient and effortless* way to detect indicators of compromission (https://en.wikipedia.org/wiki/Indicator_of_compromise[IoC]) during incident-response operations.
+The main goal of the `plast` project is to provide an *efficient and effortless* way to detect indicators of compromise (https://en.wikipedia.org/wiki/indicator_of_compromise) during incident-response operations.
 
 It provides a comprehensive framework that easily allows to add functionalities to the tool in just a few lines of code, without worrying about efficiency and scalability. `plast` embeds all referenced modules in one single tool, allowing it to be used on the field as a *standalone utility*.
 
@@ -24,11 +24,11 @@ It provides a comprehensive framework that easily allows to add functionalities 
 
 Follow these steps to get a copy of the project up and running on a live system.
 
-=== Prerequisite(s)
+=== Prerequisites
 
-Follow the steps described below to install the project on the system.
+Follow the steps described below to install the project on your system.
 
-==== Debian-based system
+==== Package Manager (`apt`)
 
 Install the required package(s):
 
@@ -41,12 +41,19 @@ And the latest `python3` environment:
 
 [source,sh]
 ----
-apt install -y python3 python3-pip python3-venv
+apt install -y python3 python3-pip
+----
+
+If you plan on building a developpement environment, you may also need to install the following package:
+
+[source,sh]
+----
+apt install -y python3-venv
 ----
 
 Modules have their own dependencies that may not be listed here.
 
-Also, if you plan on compiling hash-based YARA ruleset(s), you will need to install the OpenSSL library:
+Also, if you plan on compiling hash-based `yara` rules, you will need to install the `openssl` library:
 
 [source,sh]
 ----
@@ -79,37 +86,37 @@ pip install --upgrade pip && pip install -r REQUIREMENTS
 
 === Manual
 
-Use the following command to display the `plast` help menu:
+Use the following command to display the main help menu:
 
 [source,sh]
 ----
-plast [...] --help
+plast --help
 ----
 
-Each `Pre` module also has a custom help menu that can be called like this:
+Each `Pre` module also has a custom help menu that can be called like this (e.g. with the `file` module):
 
 [source,sh]
 ----
-plast [...] filesystem --help
+plast file --help
 ----
 
 === Basic examples
 
-The following command will recursively look for every file in the `case` directory, process them and pass into every registered `Callback` and `Post` module.
+The following command will recursively look for every file in the `case` directory, process them and pass into every registered `Callback` and `Post` module:
 
 [source,sh]
 ----
-plast -o out filesystem -i case
+plast -o out file -i case
 ----
 
-You can easily choose which modules will be invocated during processing by setting the `--callbacks` and `--post` options:
+You can easily choose which modules will be invoked during processing by setting the `--callbacks` and `--post` arguments accordingly:
 
 [source,sh]
 ----
-plast -o out --callbacks=example --post=example filesystem -i case
+plast -o out --callbacks pineapple kiwi --post banana apple orange file -i case
 ----
 
-`Callback` and `Post` modules are defined by their basename without extension (eg. `asciidoc` for `asciidoc.py`).
+`Callback` and `Post` modules are designed by their basename without extension (e.g. `banana` for `banana.py`).
 
 See more examples in {uri-contrib}[CONTRIBUTING.adoc].
 
@@ -117,7 +124,7 @@ See more examples in {uri-contrib}[CONTRIBUTING.adoc].
 
 Everyone is welcome to contribute to the project. I'll be happy to include community modules to the public repository.
 
-Please refer to the instructions provided in {uri-contrib}[CONTRIBUTING.adoc] before submitting pull request(s).
+Please refer to the instructions provided in {uri-contrib}[CONTRIBUTING.adoc] before submitting pull requests though.
 
 == Versioning
 
