--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
-Complete the API documentation in CONTRIBUTING.adoc.
+Complete the API documentation in `CONTRIBUTING.adoc`.
 Create ttygifs for basic usage case(s).
-Archive `Pre` module.
-Create a `setup.py` file (http://sametmax.com/creer-un-setup-py-et-mettre-sa-bibliotheque-python-en-ligne-sur-pypi/).
-Fill the `MANIFEST.in` file.
+Finalize the `archive.py` module.
+Test the `setup.py` file.
 In `archive.py` module: unpack recursively while checking MIME-type, and add `--level` argument to specify the maximum recursivity level.
 In `file.py` module: add --exclude argument to exclude file(s) based on wildcard pattern(s) (ex: *.pdf, *.adoc).
 
-[OK] Limit importable object(s) for each module via __all__.
+[OK] Fill the `MANIFEST.in` file.
+[OK] Fill the `setup.py` file (http://sametmax.com/creer-un-setup-py-et-mettre-sa-bibliotheque-python-en-ligne-sur-pypi/).
